Used Arrays.asList instead for getGameHistory test case as List.of creates immutable lists