@@ -4,6 +4,7 @@ import AuthenticationAndProfile.GameHistory;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
@@ -15,7 +16,7 @@ class GameHistoryTest {
         HashMap<String, Double> achievementProgress = new HashMap<>();
         achievementProgress.put("Win_Streak", 0.75);
         achievementProgress.put("Matches_Played", 0.50);
-        List<String> gameHistory = new ArrayList<>(List.of("TTT", "Checkers", "Connect4", "Checkers"));
+        List<String> gameHistory = new ArrayList<>(Arrays.asList("TTT", "Checkers", "Connect4", "Checkers"));
         GameHistory gh = new GameHistory(gameHistory, achievementProgress);
         assertEquals(gameHistory, gh.getGameHistory());
         assertEquals(achievementProgress, gh.getAchievementProgress());
